# gr-mcp

./: .pre-commit-config.yaml  README.md  fm_radio_receiver.grc  fm_radio_receiver_with_signal_meter.grc  fm_receiver.grc  main.py  pyproject.toml  setup.py  tox.ini
grc/: main.py
grc/mcp/: mcp.py
src/gnuradio_mcp/: models.py  utils.py
src/gnuradio_mcp/middlewares/: base.py  block.py  flowgraph.py  platform.py
src/gnuradio_mcp/providers/: base.py  mcp.py
tests/: conftest.py  test_block.py  test_flowgraph.py  test_platform.py  utils.py
tests/integration/: test_server.py
tests/unit/: test_block.py  test_flowgraph.py  test_platform.py
