[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnuradio-mcp"
version = "0.1.0"
description = "A FastMCP server for gnuradio."
requires-python = ">=3.13"
dependencies = [
    "pyYAML",
    "mako",
    "pygobject",
    "numpy",
    "jsonschema",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pre-commit"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Enable basic flake8 rules + isort

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
# Tell pytest where to find the package
pythonpath = ["src"]
