[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnuradio-mcp"
version = "0.1.0"
description = "A FastMCP server for gnuradio."
requires-python = ">=3.13"
dependencies = [
    "pydantic",
    "fastmcp"
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pre-commit"
]

[tool.pytest.ini_options]
# Tell pytest where to find the package
pythonpath = ["src"]
